# Ardent

./: .gitignore  AOT_GUIDE.md  CMakeLists.txt  README.md  SPEC.md  WHY_ARDENT.md  demo.avm  install.bat  install.sh  run_phase9_tests.ps1  scroll.toml
benchmarks/: run_benchmarks.ps1
examples/: blessing_and_return.ardent.ll
src/: arena.h  ast.h  debug_spell_tokens.cpp  env.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  optimizer.cpp  optimizer.h  parser.cpp  parser.h  phrase.h  scroll_cli.cpp  scroll_loader.cpp  scroll_loader.h  scroll_manifest.h  scroll_registry.h  token.h  type_check.cpp  type_check.h  type_infer.cpp  type_infer.h  types.cpp  types.h  version.h
src/avm/: bytecode.h  compiler_avm.h  disassembler.h  opcode.h  vm.h
src/irgen/: ardent_runtime.cpp  ardent_runtime.h  compiler_ir.cpp  compiler_ir.h  ir_builder.cpp  ir_builder.h  ir_demo_main.cpp
src/runtime/: aot_entry_shim.cpp  ardent_runtime.cpp  ardent_runtime.h  async_runtime.h  streams.h
test_scrolls/: arithmetic_test.ardent.ll  numbers_test.ardent.ll  phrases_test.ardent.ll  variables_test.ardent.ll
tests/: phase9_tests.cpp  validator.cpp
